--- a/Part 2/Part 2.ipynb
+++ b/Part 2/Part 2.ipynb
@@ -28,8 +28,7 @@
     "library(\"maptools\")\n",
     "library(maps)\n",
     "library(ggplot2)\n",
-    "library(mapdata)\n",
-    "# library(fiftystater)"
+    "library(mapdata)"
    ]
   },
   {
@@ -61,6 +60,7 @@
     "# Read the clinical lab data for 2018 - 2019\n",
     "clinical <- read.csv(\"Files/WHO_NREVSS_Clinical_Labs.csv\", skip = 1)\n",
     "par(bg='cornsilk' )\n",
+    "\n",
     "# Plot Total number of A\n",
     "barplot(clinical$TOTAL.A,\n",
     "        names.arg = paste(clinical$YEAR, clinical$WEEK,sep=\"-\"), \n",
@@ -68,17 +68,20 @@
     "        las = 2,\n",
     "        ylab=\"Number of Positive Specimens\")\n",
     "title(xlab=\"Week\", line=4, cex.lab=1.2)\n",
+    "\n",
     "# Plot total B\n",
     "par(new = T)\n",
     "barplot(clinical$TOTAL.B, ylim = c(0,14000), col='darkgreen', las = 2)\n",
     "\n",
     "par(new = T)\n",
+    "\n",
     "#Plot Percent Positive line\n",
     "plot(clinical$PERCENT.A, col=\"blue\", type=\"l\", pch=50,lty= 2,lwd = 2, ylim=c(0, 35), axes = F, ann = F)\n",
     "\n",
     "# Display label on right side\n",
     "mtext(\"Percent Postive\",side =4, line = 1)\n",
     "axis(side=4, line = -1 )\n",
+    "\n",
     "# Plot line graph\n",
     "lines(clinical$PERCENT.B, col=\"red\", type='l', lty= 3, lwd = 2)\n",
     "lines(clinical$PERCENT.POSITIVE, col ='black' , type ='l', lwd= 2)\n",
@@ -131,13 +134,16 @@
     "    # Combine year and week\n",
     "    Week = paste(publicHealth$YEAR, publicHealth$WEEK,sep=\"-\")\n",
     ")\n",
+    "\n",
     "# Melt into two columns\n",
     "mdata <- melt(data, id.vars = \"Week\") \n",
+    "\n",
     "# Legend\n",
     "legendLabel = c(\"A(subtyping not performed)\", \"A(H1N1)pdm09\", \"A(H3N2)\", \"H3N2v\",\n",
     "                \"B(lineage not performed)\", \"B(Victoria Lineage)\", \"B(Yamagata Lineage\")\n",
     "\n",
     "color = c(\"gold\",\"orange\", \"red\", \"purple\", \"blue\", \"green\", \"darkgreen\")\n",
+    "\n",
     "# plot using ggplot\n",
     "p <- ggplot(mdata, aes(x = Week, y = value, fill = variable)) +\n",
     "    labs(title = \"Influenza Positive Tests Reported to CDC by U.S. Public Health\\nLaboratories, National Summary, 2018-2019 Season\", \n",
@@ -177,6 +183,7 @@
     "pedDeathsRaw <- read.csv(\"Files/Weekly.csv\") #read in csv data\n",
     "pedDeathsMod <- pedDeathsRaw[c(1:173),c(2:3)] #keep relevant fields\n",
     "par(bg=\"cornsilk\") #set background\n",
+    "\n",
     "#format x labels\n",
     "pedDeathX <- c()\n",
     "year <- 2015\n",
@@ -187,7 +194,6 @@
     "  } else {\n",
     "    pedDeathX[i] <- \"\"\n",
     "  }\n",
-    "  \n",
     "  week <- week+1\n",
     "  if(week > 52){\n",
     "    week <- week%%52\n",
@@ -201,11 +207,6 @@
     "        cex.names=.5, beside=T, \n",
     "        main = \"Number of Influenza-Associated Pediatric Deaths\\nby Week of Death: 2015-2016 season to present\", xlab = \"Week\",\n",
     "        ylab = \"Deaths\", ylim=c(0,30), xlim= c(1,195), axis.lty=1, las=2, col=\"darkgreen\")\n",
-    "#axis(side = 1,\n",
-    "#     labels=lab,\n",
-    "#     at=c(1:173),\n",
-    "#     las=2,\n",
-    "#     tck=-.025)\n",
     "text(25,21, labels=\"2015-2016 \\n\\nNumber of Deaths\\nReported = 94\")\n",
     "text(85,21, labels=\"2016-2017 \\n\\nNumber of Deaths\\nReported = 110\")\n",
     "text(140,21, labels=\"2017-2018 \\n\\nNumber of Deaths\\nReported = 185\")\n",
@@ -238,6 +239,7 @@
    ],
    "source": [
     "subTypeRaw <- read.csv(\"Files/Genetic07.csv\") #read csv data\n",
+    "\n",
     "# Sum together all the values\n",
     "AH1N1 <-sum(publicHealth$A..2009.H1N1)\n",
     "AH3N2 <-sum(publicHealth$A..H3)\n",
@@ -245,6 +247,7 @@
     "BVic <- sum(publicHealth$BVic)\n",
     "BYam <- sum(publicHealth$BYam)\n",
     "B <- sum(publicHealth$B)\n",
+    "\n",
     "# Place sum into a list\n",
     "p <-  c(AH1N1, AH3N2, B, ASub, BVic, BYam)\n",
     "\n",
@@ -253,19 +256,23 @@
     "H1 <- subTypeRaw[c(5),]\n",
     "Victoria <- subTypeRaw[c(1:3),]\n",
     "Yamagata <- subTypeRaw[c(4),]\n",
+    "\n",
     "#generate labels\n",
     "H3Lab <- paste(H3$Sequence.Genetic.Group,\"\\n\",H3$Distinct.count.of.Cdc.Id..,\"\\n\",H3$X..of.Total.Distinct.count.of.Cdc.Id..)\n",
     "H1Lab <- paste(H1$Sequence.Genetic.Group,\"\\n\",H1$Distinct.count.of.Cdc.Id..,\"\\n\",H1$X..of.Total.Distinct.count.of.Cdc.Id..)\n",
     "VictoriaLab <- paste(Victoria$Sequence.Genetic.Group,\"\\n\",Victoria$Distinct.count.of.Cdc.Id..,\"\\n\",Victoria$X..of.Total.Distinct.count.of.Cdc.Id..)\n",
     "YamagataLab <- paste(Yamagata$Sequence.Genetic.Group,\"\\n\",Yamagata$Distinct.count.of.Cdc.Id..,\"\\n\",Yamagata$X..of.Total.Distinct.count.of.Cdc.Id..)\n",
+    "\n",
     "#format graphics into matrix\n",
     "par(mai=rep(0, 4))\n",
     "layout(matrix(c(1,1,2,2,1,1,3,4,1,1,5,6), ncol = 4, byrow = TRUE))\n",
+    "\n",
     "# Main Pie Graph\n",
     "pie(p, labels = p, col = c(\"orange\", \"red\",\"yellow\",\"gold2\", \"green\",\"darkgreen\"),\n",
     "    radius= 0.8, init.angle = 40)\n",
     "title(\"Influenza Positive Specimens Reported by\\nU.S. Public Health Laboratories,\\nCumulative, 2018-2019 Season\", line = -13)\n",
     "legend(-0.6,-1,legendLabel, fill = c(\"orange\", \"red\",\"yellow\",\"gold2\", \"green\",\"darkgreen\")) \n",
+    "\n",
     "# 4 side pie graph\n",
     "plot.new()\n",
     "title(\"Sequence Results, by Genetic HA Clade/Subclade,\\nof Specimens Submitted to CDC by U.S.\\nPublic Health Laboaratories, Cumulative,\\n2018-2019 Season\", line = -15)\n",
@@ -306,12 +313,15 @@
    "source": [
     "USData <- read.csv(\"Files/StateDatabyWeekforMap_2018-19week40-4.csv\")\n",
     "stateData <- USData[c(865:917),c(1,4)] #extract relevant data\n",
+    "\n",
     "#create data frame\n",
     "data <- data.frame(ActivityLevel = as.numeric(stateData$ACTIVITY.LEVEL), region = tolower(stateData$STATENAME))\n",
     "usa <- map_data(\"state\")#get data from API\n",
+    "\n",
     "# Join state with coordinates\n",
     "join <- merge(data, usa, by = \"region\")\n",
     "\n",
+    "#use ggplot to create a map\n",
     "ggplot() + \n",
     "  geom_polygon(data = join, aes(fill=ActivityLevel, x=long, y = lat, group = group), color = \"red\") + \n",
     "    labs(x = \"\", y = \"\") +\n",
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -356,16 +366,18 @@
     "\n",
     "par(bg='cornsilk' )\n",
     "\n",
+    "#plot the strain A bars\n",
     "barplot(ClinicalfluPattern$TOTAL.A, names.arg = ClinicalfluPattern$WEEK, \n",
     "        cex.names = 0.8,\n",
     "        ylim = c(0,20000), col='yellow', xlab=\"Week\", ylab=\"Number of Positive Specimens\", )\n",
     "par(new = T)\n",
-    "barplot(ClinicalfluPattern$TOTAL.B, ylim = c(0,20000), col='darkgreen')\n",
+    "barplot(ClinicalfluPattern$TOTAL.B, ylim = c(0,20000), col='darkgreen') #plot the strain B bars\n",
     "\n",
     "par(new = T)\n",
-    "#Plot Percent Positive line\n",
     "\n",
+    "#Plot Percent Positive line\n",
     "plot(ClinicalfluPattern$PERCENT.A, col=\"blue\", type=\"l\", pch=50,lty= 2,lwd = 2, ylim=c(0, 40), axes = F, ann = F)\n",
+    "\n",
     "# Display label on right side\n",
     "mtext(\"Percent Postive\",side =4, line = 1)\n",
     "axis(side=4, line = -1 )\n",
@@ -411,6 +423,7 @@
     "# Read the csv file and only select week from 2018\n",
     "publicHealthFluPattern <- read.csv(\"Files/WHO_NREVSS_Public_Health_Labs_2017-2019.csv\")\n",
     "publicHealthFluPattern <- publicHealthFluPattern[c(14:65),]\n",
+    "\n",
     "# Place data into a datafram\n",
     "data2 <- data.frame(\n",
     "    A.Substring = publicHealthFluPattern$A..Subtyping.not.Performed., \n",
@@ -422,15 +435,19 @@
     "    B.Yam = publicHealthFluPattern$BYam,\n",
     "  row.names = publicHealthFluPattern$WEEK\n",
     ")\n",
+    "\n",
     "# Genereate week number to list\n",
     "data2$Week <- c(1:52)\n",
+    "\n",
     "# Melt the data into 2 columns\n",
     "mdata2 <- melt(data2, id.vars = \"Week\")\n",
+    "\n",
     "# Legend\n",
     "legendLabel = c(\"A(subtyping not performed)\", \"A(H1N1)pdm09\", \"A(H3N2)\", \"H3N2v\",\n",
     "                \"B(lineage not performed)\", \"B(Victoria Lineage)\", \"B(Yamagata Lineage\")\n",
     "color = c(\"gold\",\"orange\", \"red\", \"purple\", \"blue\", \"green\", \"darkgreen\")\n",
     "\n",
+    "#plot bar graph using ggplot\n",
     "positiveTest2018 <- ggplot(mdata2, aes(x = mdata2$Week, y = value, fill = variable)) +\n",
     "    labs(title = \"Influenza Positive Tests Reported to CDC by U.S. Public Health\\nLaboratories, National Summary, 2018 Season\", \n",
     "    y = \"Number of Positive Speciments\", x = \"Week\") + \n",
@@ -488,12 +505,14 @@
     "barplot(newYorkClinical$TOTAL.B, ylim = c(0,2000), col='darkgreen')\n",
     "\n",
     "par(new = T)\n",
-    "#Plot Percent Positive line\n",
     "\n",
+    "#Plot Percent Positive line\n",
     "plot(newYorkClinical$PERCENT.A, col=\"blue\", type=\"l\", pch=50,lty= 2,lwd = 2, ylim=c(0, 35), axes = F, ann = F)\n",
+    "\n",
     "# Display label on right side\n",
     "mtext(\"Percent Postive\",side =4, line = 1)\n",
     "axis(side=4, line = -1 )\n",
+    "\n",
     "# Plot the line graph\n",
     "lines(newYorkClinical$PERCENT.B, col=\"red\", type='l', lty= 3, lwd = 2)\n",
     "lines(newYorkClinical$PERCENT.POSITIVE, col ='black' , type ='l', lwd= 2)\n",
@@ -502,13 +521,6 @@
     "       col = c(\"yellow\", \"darkgreen\", \"black\", \"blue\", \"red\"), fill=c(\"yellow\", \"darkgreen\", NA, NA, NA),\n",
     "       lty = c(0,0,1,2,2), lwd = 2, border= c(\"black\", \"black\", NA, NA, NA))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -523,7 +535,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
