--- a/Part 3/Part 3.ipynb
+++ b/Part 3/Part 3.ipynb
@@ -9,11 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'shiny' was built under R version 3.5.2\"Warning message:\n",
+      "\"package 'twitteR' was built under R version 3.5.2\"Warning message:\n",
+      "\"package 'rtweet' was built under R version 3.5.2\"\n",
+      "Attaching package: 'rtweet'\n",
+      "\n",
+      "The following object is masked from 'package:twitteR':\n",
+      "\n",
+      "    lookup_statuses\n",
+      "\n",
+      "Warning message:\n",
+      "\"package 'ggmap' was built under R version 3.5.2\"Loading required package: ggplot2\n",
+      "Warning message:\n",
+      "\"package 'ggplot2' was built under R version 3.5.2\"Google's Terms of Service: https://cloud.google.com/maps-platform/terms/.\n",
+      "Please cite ggmap if you use it! See citation(\"ggmap\") for details.\n",
+      "Warning message:\n",
+      "\"package 'maptools' was built under R version 3.5.2\"Loading required package: sp\n",
+      "Warning message:\n",
+      "\"package 'sp' was built under R version 3.5.2\"Checking rgeos availability: FALSE\n",
+      " \tNote: when rgeos is not available, polygon geometry \tcomputations in maptools depend on gpclib,\n",
+      " \twhich has a restricted licence. It is disabled by default;\n",
+      " \tto enable gpclib, type gpclibPermit()\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(viridis): there is no package called 'viridis'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(viridis): there is no package called 'viridis'\nTraceback:\n",
+      "1. library(viridis)",
+      "2. stop(txt, domain = NA)"
+     ]
+    }
+   ],
    "source": [
     "# All libraries\n",
+    "library(shiny)\n",
     "library(twitteR)\n",
     "library(rtweet)\n",
     "library(\"ggmap\")\n",
@@ -22,8 +62,7 @@
     "library(viridis)\n",
     "library(ggthemes)\n",
     "library(fiftystater)\n",
-    "library(reshape2)\n",
-    "library(shiny)"
+    "library(reshape2)"
    ]
   },
   {
@@ -40,19 +79,20 @@
     }
    ],
    "source": [
-    "# API_Key, API_Secret\n",
-    "consumer_key <- \"y7Hd2hpV1mrtNoqyadIXjfH4c\"\n",
-    "consumer_secret <- \"gm3fhY3wHsJJZFykDafLBqYkNN5vL8ltQKgg746lfRU2qzq1Ky\"\n",
-    "access_token <- \"935345877715243008-qqzLBe0YhamrabXw6bkHQYymIRmRisG\"\n",
-    "access_secret <- \"reCFuv7atTTMTvnhlrqCzZ1QV4QAg2NgFd8Wi4QuLyd2k\"\n",
+    "# API keys\n",
+    "#Please provide your owne keys\n",
+    "consumer_key <- \"\"\n",
+    "consumer_secret <- \"\"\n",
+    "access_token <- \"\"\n",
+    "access_secret <- \"\"\n",
     "setup_twitter_oauth(consumer_key, consumer_secret, access_token, access_secret)\n",
     "token <- create_token(\n",
-    "    app = \"cse487/587Lab1\",\n",
-    "    consumer_key = \"y7Hd2hpV1mrtNoqyadIXjfH4c\",\n",
-    "    consumer_secret =\"gm3fhY3wHsJJZFykDafLBqYkNN5vL8ltQKgg746lfRU2qzq1Ky\",\n",
-    "    access_token = \"935345877715243008-qqzLBe0YhamrabXw6bkHQYymIRmRisG\",\n",
-    "    access_secret = \"reCFuv7atTTMTvnhlrqCzZ1QV4QAg2NgFd8Wi4QuLyd2k\")\n",
-    "API_KEY = \"AIzaSyBhwlrve8M5bM7NyRJ82G8xfyhCzxuVAzg\"\n",
+    "    app = \"\",\n",
+    "    consumer_key = \"\",\n",
+    "    consumer_secret =\"\",\n",
+    "    access_token = \"\",\n",
+    "    access_secret = \"\")\n",
+    "API_KEY = \"\"\n",
     "register_google(key = API_KEY)"
    ]
   },
@@ -34744,7 +34784,7 @@
     "# Function to check if data contains the keywords\n",
     "searchQuery <- function(x){\n",
     "    text = as.character(filtered[x,\"text\"])\n",
-    "#     print(text)\n",
+    "    \n",
     "    if (grepl(\"flu\",text) || grepl(\"fluseason\",text)){\n",
     "         state <- as.character(filtered[x,\"state\"])\n",
     "         screen_name<- as.character(filtered[x,\"screen_name\"])\n",
@@ -34827,6 +34867,7 @@
    "outputs": [],
    "source": [
     "mapData <- read.csv(\"Files/filteredData.csv\")\n",
+    "\n",
     "# Create a table with States and the frequency\n",
     "states <- as.data.frame(table(mapData$state))"
    ]
@@ -34839,12 +34880,13 @@
    "source": [
     "# Create coord for each states\n",
     "usa <- map_data(\"state\")\n",
+    "\n",
     "# List of all states in the US\n",
-    "listOfStates <- unique(fifty_states$id) \n",
+    "listOfStates <- unique(fifty_states$id)\n",
+    "\n",
     "# Change column names of state df\n",
     "colnames(states) <- c(\"region\", \"freq\")\n",
     "\n",
-    "# states <- data.frame(region = tolower(states$Var1), freq = as.numeric(states$Freq))\n",
     "# In case we did not recieve tweets from any states, set default value\n",
     "for (s in listOfStates){\n",
     "    if (!(s %in% states$region)){\n",
@@ -34983,69 +35025,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Listening on http://127.0.0.1:5621\n",
-      "Warning message:\n",
-      "\"Error in stop.App: could not find function \"stop.App\"\"Stack trace (innermost first):\n",
-      "    89: server [<text>#38]\n",
-      "    48: <Anonymous>\n",
-      "    47: do.call\n",
-      "    46: print.shiny.appobj\n",
-      "    45: print\n",
-      "    44: eval\n",
-      "    43: eval\n",
-      "    42: withVisible\n",
-      "    41: evalVis\n",
-      "    40: capture.output\n",
-      "    39: paste\n",
-      "    38: repr_text.default\n",
-      "    37: mime2repr[[mime]]\n",
-      "    36: withCallingHandlers\n",
-      "    35: doTryCatch\n",
-      "    34: tryCatchOne\n",
-      "    33: tryCatchList\n",
-      "    32: tryCatch\n",
-      "    31: FUN\n",
-      "    30: lapply\n",
-      "    29: sapply\n",
-      "    28: lapply\n",
-      "    27: unlist\n",
-      "    26: Filter\n",
-      "    25: filter_map\n",
-      "    24: prepare_mimebundle\n",
-      "    23: prepare_mimebundle_kernel\n",
-      "    22: value_fun\n",
-      "    21: withVisible\n",
-      "    20: withCallingHandlers\n",
-      "    19: doTryCatch\n",
-      "    18: tryCatchOne\n",
-      "    17: tryCatchList\n",
-      "    16: tryCatch\n",
-      "    15: try\n",
-      "    14: handle\n",
-      "    13: evaluate_call\n",
-      "    12: evaluate\n",
-      "    11: doTryCatch\n",
-      "    10: tryCatchOne\n",
-      "     9: tryCatchList\n",
-      "     8: doTryCatch\n",
-      "     7: tryCatchOne\n",
-      "     6: tryCatchList\n",
-      "     5: tryCatch\n",
-      "     4: executor$execute\n",
-      "     3: handle_shell\n",
-      "     2: kernel$run\n",
-      "     1: IRkernel::main\n"
+      "Listening on http://127.0.0.1:3923\n"
      ]
     }
    ],
    "source": [
+    "#ui controls front end\n",
     "ui <- fluidPage(theme = \"bootstrap.css\",\n",
     "  titlePanel(\"Map\"),\n",
     "  fluidRow(class = \"Row1\", \n",
     "           column(6,wellPanel(\n",
     "             selectInput(\"var\", label=\"Select a map to compare:\",\n",
     "                         choices = c(\"CDC vs Twitter\" = \"Main\", \"CDC vs Keyword\"=\"Second\"))\n",
-    "           #  ,fluidRow(column(12, textOutput(\"description\")))\n",
     "           )),\n",
     "           column(6,imageOutput(\"CDC\"))),\n",
     "  fluidRow(class = \"Row2\",\n",
@@ -35059,9 +35050,11 @@
     "  )\n",
     ")\n",
     "\n",
+    "#server controls backend\n",
     "server <- function(input,output){\n",
     "    output$CDC <- renderImage({ list(src=\"CDC.png\", width =650, height =400, fileType = \"image/png\")},deleteFile = FALSE)\n",
     "    output$image1 <- renderImage({\n",
+    "        #decision structure for selecting output map based on input\n",
     "      if (input$var == \"Main\"){\n",
     "        list(src=\"MainMap.png\", width = 650, height = 400, fileType=\"image/png\")\n",
     "      }else if (input$var == \"Second\"){\n",
@@ -35070,10 +35063,15 @@
     "      \n",
     "    }, deleteFile=FALSE)\n",
     "    output$description <- renderText(\n",
+    "        #decision structure for selecting output text based on input\n",
     "      if (input$var == \"Main\"){\n",
-    "        \"Based on the collection of tweets compared with the map from CDC, we can see that we had a large amount of tweets\\n coming from Texas.\"\n",
+    "        \"Based on the collection of tweets compared with the map from the CDC, a large amount of tweets\\n are from the states with the greatest population,\n",
+    "         namely California, Texas, and New York. In contrast, the area with the highest level of Flu activity were in the South, interestingly centered around Texas. Texas may have\n",
+    "        generated so many matching tweets not only because of its large population, but also because of its high level of Flu activity.\"\n",
     "      }else if (input$var == \"Second\"){\n",
-    "        \"The key word we used to collect tweets was Flu and FluSeason. Majority of the tweets from our map are from Californa.\"\n",
+    "        \"The key words we used to collect the most tweets were #Flu and #FluSeason. This map again demonstrates a similar spatial distribution as our total collection of tweets,\n",
+    "         largely because these keywords were responsible for most of the data collected. California, the state with the largest population, had the most matching tweets of any state. \n",
+    "        The next step in this analysis would be not to only compare total amount of tweets versus Flu activity, but rather tweets per capita versus Flu activity.\"\n",
     "      }\n",
     "    )\n",
     "}\n",
@@ -35102,7 +35100,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
