Added install prompts

--- a/Part 2/Part 2.ipynb
+++ b/Part 2/Part 2.ipynb
@@ -16,6 +16,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'reshape2' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'ggplot2' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'dplyr' successfully unpacked and MD5 sums checked\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"cannot remove prior installation of package 'dplyr'\""
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'ggmap' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'maptools' successfully unpacked and MD5 sums checked\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"cannot remove prior installation of package 'maptools'\""
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'maps' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'mapdata' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp0OJABM\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"reshape2\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"ggplot2\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"dplyr\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"ggmap\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"maptools\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"maps\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"mapdata\", repos = \"http://cran.us.r-project.org\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
@@ -27,7 +197,6 @@
     "library(\"ggmap\")\n",
     "library(\"maptools\")\n",
     "library(maps)\n",
-    "library(ggplot2)\n",
     "library(mapdata)"
    ]
   },
