--- a/Part 3/Part 3.ipynb
+++ b/Part 3/Part 3.ipynb
@@ -9,6 +9,207 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'shiny' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'twitteR' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'rtweet' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'ggmap' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'maptools' successfully unpacked and MD5 sums checked\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"cannot remove prior installation of package 'maptools'\""
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'maps' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n",
+      "also installing the dependency 'gridExtra'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'gridExtra' successfully unpacked and MD5 sums checked\n",
+      "package 'viridis' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'ggthemes' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n",
+      "Warning message:\n",
+      "\"package 'fiftystater' is not available (for R version 3.5.1)\"Installing package into 'C:/Users/thear/OneDrive/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'reshape2' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\thear\\AppData\\Local\\Temp\\Rtmp8aaSfi\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"shiny\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"twitteR\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"rtweet\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"ggmap\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"maptools\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"maps\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"viridis\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"ggthemes\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"fiftystater\", repos = \"http://cran.us.r-project.org\")\n",
+    "install.packages(\"reshape2\", repos = \"http://cran.us.r-project.org\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
